movie_project/movies/static/movies/css/users.css
/* ... */
.image-form .add-people-section ul li p {
    font-size: 1rem;
    color: #5a5a5a;
    margin-top: 2px;
}

.image-form .add-people-section ul li:hover {
    background-color: rgb(241, 241, 241);
}

.image-form .add-people-section input[type="checkbox"] {
    transform: scale(1.5);
    margin: 1rem;
}

.image-form .add-people-section img {
    width: 60px;
    aspect-ratio: 1 / 1;
    object-fit: cover;
    border-radius: 5px;
}

.image-form .back-btn {
    display: inline-flex;
    gap: 4px;
    align-items: center;
    color: #464646;
}

.image-form .back-btn i {
    color: #2e2e2e;
    font-size: 1.2rem;
}

.image-form .back-btn span {
    color: #2e2e2e;
    font-weight: 700;
    cursor: pointer;
}

.form-actions {
    display: flex;
    justify-content: flex-end;
    gap: 10px;
    margin-top: 1rem;
}

.image-form button,
.custom-list-form button
{
    font-family: 'Electrolize', sans-serif;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    outline: none;
    cursor: pointer;
    transition: 0.3s;
}

.form-actions button[type="reset"] {
    background-color: #ebebeb;
    color: #2e2e2e;
    border: solid 1px #464646;
}

.form-actions button[type="submit"] {
    background-color: rgb(0, 110, 255);
    color: white;
}

.image-form.delete {
    width: auto;
}

.image-form.delete .form-actions button[type="submit"] {
    background-color: rgb(231, 20, 20);
}

.image-form .image-container {
    aspect-ratio: 16 / 9;
    margin-bottom: 4px;
}

.image-form .image-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 5px;
}

.image-form .image-container h4 {
    position: relative;
    color: #2e2e2e;
    margin-bottom: 10px;
}

.custom-list-form {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: auto;
    height: auto;
    background-color: white;
    padding: 1rem;
    border-radius: 10px;
}

.custom-list-form .header i {
    font-size: 2rem;
}

.custom-list-form * {
    color: black;
}

.custom-list-form .header h1 {
    font-size: 1.5rem;
}

#textarea-wrapper {
    display: none;
    align-items: start;
}

#textarea-wrapper button {
    font-family: 'Electrolize', sans-serif;
    padding: 5px 10px;
    border-radius: 4px;
    border: none;
    outline: none;
    cursor: pointer;
}

#textarea-wrapper button[type="submit"] {
    background-color: #087afc;
    color: white;
}

#list-name-textarea {
    background-color: #2e2e2e;
    color: white;
    font-family: 'Electrolize', sans-serif;
    font-size: 1.5rem;
    padding: 10px;
    height: 3rem;
    border: solid 1px #087afc;
    resize: none;
    overflow: hidden;
}

.custom-list-form h4 {
    margin: 0.75rem 0;
}

.custom-list-form .header p {
    font-weight: 700;
    color: #535353;
}

.custom-list-form .line {
    width: 100%;
    height: 1px;
    margin: 10px 0;
    background-color: rgb(20, 20, 20, 0.3);
}

.custom-list-form .wrapper {
    display: flex;
    gap: 1.5rem;
}

.custom-list-form input[type="text"] {
    font-family: 'Electrolize', sans-serif;
    font-size: 1rem;
    width: 100%;
    padding: 6px;
    border: solid 1px #a3a3a3;
    border-radius: 5px;
}

.custom-list-form #id_privacy {
    display: flex;
    align-items: center;
    gap: 1rem;
}

.custom-list-form #id_privacy button {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    flex-direction: column;
    border: solid 1px #a3a3a3;
    border-radius: 5px;
    width: 7rem;
    padding: 10px 20px;
    cursor: pointer;
    transition: 0.3s;
}

.custom-list-form #id_privacy button:hover, 
.custom-list-form #id_privacy button.selected
{
    background-color: #eaf4ff;
    border: solid 1px #087afc;
}

.custom-list-form #id_privacy input {
    display: none;
}

.custom-list-form #id_privacy i {
    font-size: 0.8rem;
    color: #2e2e2e;
}

.custom-list-form #id_privacy label {
    font-size: 0.8rem;
    font-weight: 700;
    color: #2e2e2e;
    pointer-events: none;
}

.custom-list-form textarea {
    font-family: 'Electrolize', sans-serif;
    font-size: 1rem;
    height: 75%;
    padding: 6px;
    border: solid 1px #a3a3a3;
    border-radius: 5px;
    resize: none;
}

.custom-list-form #ranked_list-label {
    font-weight: 700;
    color: black;
}

.custom-list-form p {
    color: #6d6d6d;
}

.select2-results__option {
    color: black;
} 

